# flexitext

./: .gitignore  .pylintrc  404.html  CHANGELOG.md  Changelog.md  MANIFEST.in  Playground.ipynb  README.md  index.html  objects.inv  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: publish_docs.yml  publish_pypi.yml  tests.yml
assets/stylesheets/: logo.css
docsite/: logo.ipynb  mkdocs.yml
docsite/docs/: index.md
docsite/docs/assets/stylesheets/: colors.css
docsite/docs/reference/: FlexiText.md  Style.md  Text.md  flexitext.md
docsite/docs/usage/: OOP.ipynb  OOP.md  functional.ipynb  functional.md  index.md
example/: flexitext.ipynb  introduction.ipynb
flexitext/: __init__.py  classes.py  flexitext.py  style.py  text.py  textgrid.py  utils.py  version.py
flexitext.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
flexitext/parser/: __init__.py  args.py  blocks.py  make_texts.py  utils.py
flexitext/parser/classes/: __init__.py  parser.py  scanner.py  token.py
flexitext/tests/: __init__.py  test_flexitext.py  test_style.py  test_text.py  test_textgrid.py  test_utils.py
flexitext/tests/parser/: test_args.py  test_make_texts.py  test_utils.py
reference/: index.html
reference/FlexiText/: index.html
reference/Style/: index.html
reference/Text/: index.html
reference/flexitext/: index.html
search/: search_index.json
usage/: OOP.ipynb  index.html
usage/OOP/: index.html
usage/functional/: index.html
